--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
-    ext.room_version = "2.4.2"
-
     repositories {
         google()
         mavenCentral()
@@ -16,6 +13,7 @@ buildscript {
     }
     ext {
         navigationVersion = "2.3.0"
+        room_version = "2.4.2"
     }
 }
 
