--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
-        dataBinding false
+        viewBinding true
     }
 }
 
@@ -53,7 +54,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
